--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "atishNaik",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "firebase-admin": "^11.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0"
   }
